Ensure the next/previous buttons are visible in the screenshot plugin

--- a/plugins/screenshots/screenshots.css
+++ b/plugins/screenshots/screenshots.css
@@ -1,6 +1,5 @@
 .scframe { position: relative; left: 0px; top: 0px; text-align: center; width: 100%; padding: 0; vertical-align: middle; }
 .scframe img { width: 100%; vertical-align: middle; }
-.scplay { display: none }
 
 #scfirst { width: 40px }
 #scprev { width: 40px }
@@ -10,3 +9,7 @@
 
 .scframe_cont { overflow: auto; background-color: black }
 #st_screenshots { overflow: auto }
+
+#tsk_btns > input {
+    display: inline-block;
+}
